force-app/main/default/objects/FS_CIF__c/FS_CIF__c.object-meta.xml
<CustomObject>
    <label>CIF</label>
    <nameField>
        <label>CIF Outlet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>