force-app/main/default/objects/FS_CIF__c/fields/Any_known_construction_needs__c.field-meta.xml
<CustomField>
    <fullName>Any_known_construction_needs__c</fullName>
    <label>Any known construction needs?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>