force-app/main/default/objects/FS_CIF__c/fields/Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>