force-app/main/default/objects/FS_CIF__c/fields/Business_System__c.field-meta.xml
<CustomField>
    <fullName>Business_System__c</fullName>
    <formula>FS_Account__r.FS_Business_System__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business System</label>
    <type>Text</type>
</CustomField>