force-app/main/default/objects/FS_CIF__c/fields/Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>Chain_ACN__c</fullName>
    <formula>FS_Account__r.FS_Chain_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain ACN</label>
    <type>Text</type>
</CustomField>