force-app/main/default/objects/FS_CIF__c/fields/Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>Chain_Name__c</fullName>
    <formula>FS_Account__r.FS_Chain__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain Name</label>
    <type>Text</type>
</CustomField>