force-app/main/default/objects/FS_CIF__c/fields/CIF_Head__c.field-meta.xml
<CustomField>
    <fullName>CIF_Head__c</fullName>
    <label>CIF Header Name</label>
    <referenceTo>CIF_Header__c</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>