force-app/main/default/objects/FS_CIF__c/fields/CIF_Line_Detail_Custom__c.field-meta.xml
<CustomField>
    <fullName>CIF_Line_Detail_Custom__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Line Detail Custom</label>
    <type>Text</type>
</CustomField>