force-app/main/default/objects/FS_CIF__c/fields/COM__c.field-meta.xml
<CustomField>
    <fullName>COM__c</fullName>
    <formula>FS_Account__r.FS_COM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COM</label>
    <type>Text</type>
</CustomField>