force-app/main/default/objects/FS_CIF__c/fields/Does_Install_Involve_RO4W__c.field-meta.xml
<CustomField>
    <fullName>Does_Install_Involve_RO4W__c</fullName>
    <label>Does Install Involve RO4W?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>