force-app/main/default/objects/FS_CIF__c/fields/First_SA_dispenser_Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>First_SA_dispenser_Quantity_c__c</fullName>
    <label>1st SA Dispenser Type/s &amp; QTY</label>
    <type>TextArea</type>
</CustomField>