force-app/main/default/objects/FS_CIF__c/fields/First_SA_dispenser_type_s__c.field-meta.xml
<CustomField>
    <fullName>First_SA_dispenser_type_s__c</fullName>
    <description>First Site Assessment Platform types</description>
    <label>Dispenser Type/s for First SA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>8000</fullName>
            </value>
            <value>
                <fullName>9000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>