force-app/main/default/objects/FS_CIF__c/fields/FS_7000_HFCS_Sweetener_location__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_HFCS_Sweetener_location__c</fullName>
    <label>7000/7100 HFCS/Sweetener location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>