force-app/main/default/objects/FS_CIF__c/fields/FS_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related CIF</relationshipLabel>
    <relationshipName>CIF9</relationshipName>
    <type>Lookup</type>
</CustomField>