force-app/main/default/objects/FS_CIF__c/fields/FS_Ancillary_equipment_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_equipment_1__c</fullName>
    <label>Ancillary equipment 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>