force-app/main/default/objects/FS_CIF__c/fields/FS_Ancillary_equipment_to_remain_on_site__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_equipment_to_remain_on_site__c</fullName>
    <description>Tea Tower,Barguns,etc</description>
    <label>Ancillary equipment to remain on-site</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>