force-app/main/default/objects/FS_CIF__c/fields/FS_Ancillary_Tea_Tower_etc_needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_Tea_Tower_etc_needed__c</fullName>
    <label>Ancillary (Tea Tower, etc.) needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>