force-app/main/default/objects/FS_CIF__c/fields/FS_Any_Crew_Serve_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Any_Crew_Serve_Dispensers__c</fullName>
    <label>Will any dispensers used for crew serve?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>