force-app/main/default/objects/FS_CIF__c/fields/FS_Bill_to_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_Country__c</fullName>
    <description>Bill to Country</description>
    <label>Bill to Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>