force-app/main/default/objects/FS_CIF__c/fields/FS_Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_State__c</fullName>
    <label>Bill to State</label>
    <length>16</length>
    <type>Text</type>
</CustomField>