force-app/main/default/objects/FS_CIF__c/fields/FS_Brandset1__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brandset 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>contains</operation>
            <valueField>$Source.FS_Platform1__c</valueField>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF_Brandse_1</relationshipName>
    <type>Lookup</type>
</CustomField>