force-app/main/default/objects/FS_CIF__c/fields/FS_Cartridge_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Payment_Method__c</fullName>
    <inlineHelpText>Ã¢â‚¬Å“&quot;Payment Term&quot; Invoicing requires Finance Approval from S. Curtis Marshall &amp; Mark Westenfelder.
 
Warning: When Payment Term eligibility is changed from Ã¢â‚¬Å“YesÃ¢â‚¬ï¿½ to Ã¢â‚¬Å“NoÃ¢â‚¬ï¿½, existing Ã¢â‚¬Å“Payment TermÃ¢â‚¬ï¿½ methods will need to be updated.Ã¢â‚¬ï¿½</inlineHelpText>
    <label>Cartridge Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Invoice_Customer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Distributor billing</fullName>
            </value>
            <value>
                <fullName>Invoice (Payment Terms)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>