force-app/main/default/objects/FS_CIF__c/fields/FS_CIF_Header__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF_Header__c</fullName>
    <description>CIF Header#</description>
    <formula>CIF_Head__r.FS_CIF_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Header#</label>
    <type>Text</type>
</CustomField>