force-app/main/default/objects/FS_CIF__c/fields/FS_CIF_Header_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF_Header_Status__c</fullName>
    <formula>TEXT(CIF_Head__r.FS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Header Status</label>
    <type>Text</type>
</CustomField>