force-app/main/default/objects/FS_CIF__c/fields/FS_Color1__c.field-meta.xml
<CustomField>
    <fullName>FS_Color1__c</fullName>
    <label>Color 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>