force-app/main/default/objects/FS_CIF__c/fields/FS_Contractor_Coordination_to_be_done_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_Coordination_to_be_done_by__c</fullName>
    <description>Who will coordinate with contractor?</description>
    <label>Who will coordinate with contractor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>