force-app/main/default/objects/FS_CIF__c/fields/FS_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_Name__c</fullName>
    <label>Construction Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>