force-app/main/default/objects/FS_CIF__c/fields/FS_Cup_Name_4__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Name_4__c</fullName>
    <label>Cup Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>