force-app/main/default/objects/FS_CIF__c/fields/FS_Current_Fountain_Equipment_Ownership__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Fountain_Equipment_Ownership__c</fullName>
    <label>Ownership of Current Fountain Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy CCNA</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
            <value>
                <fullName>Dealer Owned (DOE)</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>