force-app/main/default/objects/FS_CIF__c/fields/FS_Customer_disposition_Submit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_disposition_Submit_DateTime__c</fullName>
    <description>CustomerÃ¢â‚¬â„¢s disposition Provided Date/Tim</description>
    <label>CustomerÃ¢â‚¬â„¢s disposition Provided Date/Tim</label>
    <type>DateTime</type>
</CustomField>