force-app/main/default/objects/FS_CIF__c/fields/FS_Customer_s_disposition_after_review__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_s_disposition_after_review__c</fullName>
    <description>Picklist values for CustomerÃ¢â‚¬â„¢s Disposition after review</description>
    <label>CustomerÃ¢â‚¬â„¢s disposition after review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Customer</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending Site Survey</fullName>
                <default>true</default>
                <label>Pending Site Survey</label>
            </value>
            <value>
                <fullName>Second Site Survey Pending</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Decision</fullName>
            </value>
            <value>
                <fullName>Ready for COM</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Reviewed Awaiting Customer Decision</fullName>
                <isActive>false</isActive>
                <label>Reviewed Awaiting Customer Decision</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>