force-app/main/default/objects/FS_CIF__c/fields/FS_Customer_s_Disposition_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_s_Disposition_Submitted_by__c</fullName>
    <description>Customerâ€™s disposition Captured by</description>
    <label>Customerâ€™s disposition Captured by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>