force-app/main/default/objects/FS_CIF__c/fields/FS_Customers_Ice_Fill_Policy__c.field-meta.xml
<CustomField>
    <fullName>FS_Customers_Ice_Fill_Policy__c</fullName>
    <label>Customer&#39;s Ice Fill Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>33%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>66%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>