force-app/main/default/objects/FS_CIF__c/fields/FS_Davaco_Order_Entered__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Order_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Davaco Order Entered</description>
    <label>Order Entered</label>
    <type>Checkbox</type>
</CustomField>