force-app/main/default/objects/FS_CIF__c/fields/FS_Davaco_Order_Entered_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Order_Entered_Date_Time__c</fullName>
    <label>Order Entered Date/Time</label>
    <type>DateTime</type>
</CustomField>