force-app/main/default/objects/FS_CIF__c/fields/FS_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Delivery_Method__c</fullName>
    <label>Requested Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Direct Ship</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>