force-app/main/default/objects/FS_CIF__c/fields/FS_Dispenser_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Comments__c</fullName>
    <label>Dispenser Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>