force-app/main/default/objects/FS_CIF__c/fields/FS_Disposition_of_Current_BIB_rack__c.field-meta.xml
<CustomField>
    <fullName>FS_Disposition_of_Current_BIB_rack__c</fullName>
    <label>Indicate Disposition of Current BIB Rack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leave on-site</fullName>
            </value>
            <value>
                <fullName>Return to KO warehouse</fullName>
            </value>
            <value>
                <fullName>Return to Bottler warehouse</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>