force-app/main/default/objects/FS_CIF__c/fields/FS_Distributor_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_City__c</fullName>
    <description>Distributor City</description>
    <label>Distributor City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>