force-app/main/default/objects/FS_CIF__c/fields/FS_Distributor_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_State__c</fullName>
    <label>Distributor State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>