force-app/main/default/objects/FS_CIF__c/fields/FS_Does_Install_Involve_a_Replacement__c.field-meta.xml
<CustomField>
    <fullName>FS_Does_Install_Involve_a_Replacement__c</fullName>
    <label>Does Install Involve Replacement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>