force-app/main/default/objects/FS_CIF__c/fields/FS_EP_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_EP_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to check which CIF ready for EP creation</description>
    <label>EP Check</label>
    <type>Checkbox</type>
</CustomField>