force-app/main/default/objects/FS_CIF__c/fields/FS_First_SA_dispenser_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FS_First_SA_dispenser_Quantity__c</fullName>
    <label>1st SA Dispenser Type/s &amp; QTY</label>
    <type>TextArea</type>
</CustomField>