force-app/main/default/objects/FS_CIF__c/fields/FS_Fluid_Ounces_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Fluid_Ounces_2__c</fullName>
    <label>Fluid Ounces 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>