force-app/main/default/objects/FS_CIF__c/fields/FS_Fluid_Ounces_4__c.field-meta.xml
<CustomField>
    <fullName>FS_Fluid_Ounces_4__c</fullName>
    <label>Fluid Ounces 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>